--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,13 @@
             <groupId>com.grinderwolf</groupId>
             <artifactId>slimeworldmanager-plugin</artifactId>
             <version>2.7.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.bgsoftware</groupId>
             <artifactId>SuperiorSkyblockAPI</artifactId>
-            <version>latest</version>
+            <version>1.9.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
